# sturdy-potato

./: .env.example  .gitignore  API_KEYS_SETUP.md  COMPLETE_PLATFORM_GUIDE.md  COMPLETE_WORKFLOWS.md  Dockerfile  Dockerfile.security-tools  FINAL_DELIVERY_SUMMARY.md  FINAL_SUMMARY.md  FIXES_AND_NEW_FEATURES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KALI_INTEGRATION_ARCHITECTURE.md  KALI_INTEGRATION_COMPLETE.md  MILITARY_GRADE_PLATFORM.md  MILITARY_UI_BUILD_GUIDE.md  PRODUCTION_READINESS_CHECKLIST.md  QUICK_START_GUIDE.md  README.md  README_INGESTION.md  SATELLITE_IMPLEMENTATION_SUMMARY.md  SATELLITE_SETUP_GUIDE.md  SECURITY_TOOLS_IMPLEMENTATION_GUIDE.md  SETUP_TELEGRAM_API.md  SETUP_TWITTER_API.md  SYSTEM_ANALYSIS_AND_AMBIGUITIES.md  SYSTEM_GAPS_AND_ISSUES.md  TESTING_GUIDE.md  UI_STATUS_AND_OPTIONS.md  alembic.ini  docker-compose.prod.yml  docker-compose.satellite.yml  docker-compose.security.yml  docker-compose.yml  jest.config.js  package.json  pyproject.toml  requirements.txt
alembic/: env.py
docs/: API_CONTRACTS.md  ARCHITECTURE.md  COMPLETE_WORKFLOW.md  DATA_SCHEMAS.md  INGESTION_GUIDE.md  ML_INTEGRATION_GUIDE.md  ML_MODELS.md  NEWS_SOURCES_GUIDE.md  SECURITY_GOVERNANCE.md  UI_SPECIFICATION.md
extension/: manifest.json
kubernetes/: security-deployment.yaml
scripts/: create_admin_user.py  deploy_satellite.sh  init-db.sql  quick_test.py  seed_test_data.py  start_ingestion.py  start_platform.sh  start_stream_processor.py  stop_platform.sh  test_ml_system.py  test_satellite_system.py
src/: __init__.py  index.js
tests/: __init__.py  messageAnalyzer.test.js  test_anomaly_detection.py  test_api.py  test_ingestion.py  test_integration.py  test_kafka.py  test_llm_api.py  test_ml_services.py  (+6 more)
(+119 files in other folders)
